Compilation-based highlighting: reimplementation (code review fixes and improvements) #SCL-18685